# flugbuch

./: CMakeLists.txt  Dockerfile  ppa_upload.sh  run_docker.sh
cmake/: FindWt.cmake
debian/: README.Debian  changelog  control  copyright  postinst  prerm  rules
doc/: readme_linux.txt  readme_windows.txt  required packages ubuntu 8.10.sh  required packages.sh
inst/: append_wt_config.pl  build_debian_package.sh  build_debin_package.sh  flugbuch2.homelinux.org  flugbuch2.local  flugbuch2.ulrichard.ch  flugbuch2.ulrichard.ch.conf  wt_config.xml  wt_config_merge.xml
inst/InnoSetup/: flugbuch2.iss
inst/deb/: changelog  control  menu
inst/debian/: changelog  control  copyright  dirs  postinst  prerm  rules
inst/inno/: flugbuch2.iss
proj/: readme.txt
proj/CodeBlocks/: Flugbuch2.workspace
proj/CodeBlocks/Flugbuch2_unittests/: Flugbuch2_unittests.cbp
proj/CodeBlocks/Flugbuch2_wt/: Flugbuch2_wt.cbp
proj/CodeBlocks/tests_wt/: main.cpp  tests_wt.cbp
proj/KDevelop3/Flugbuch2_unittests/: AUTHORS  CMakeLists.txt  Doxyfile  Flugbuch2_unittests.kdevelop.filelist  Flugbuch2_unittests.kdevelop.pcs  Flugbuch2_wt  Makefile.am  configure.in  flugbuch2.css  flugbuch2_unittests.kdevelop  flugbuch2_unittests.kdevses
proj/cmake/: CMakeLists.txt  FindBoost.cmake  FindDtl.cmake  FindDtl.txt  FindFcgi.cmake  FindWt.cmake  WtFindBoost.txt
proj/msvc8/flugbuch2/: flugbuch2.sln  flugbuch2.vcproj
proj/msvc8/simple_tests/: ReadMe.txt  simple_tests.cpp  simple_tests.vcproj  stdafx.cpp
proj/netbeans6/Flugbuch2_Unittests/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  configurations.xml  project.xml
proj/netbeans6/Flugbuch2_wt/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  configurations.xml  project.xml
res/: flugbuch2.css
src/: CMakeLists.txt  Doxyfile
src/core/: CoreStructures.cpp  CoreStructures.h  FlightDatabase.cpp  FlightDatabase.h  GenGeomLibSerialize.h  MainExternalIncludes.h  WaypointOptimizer.cpp  WaypointOptimizer.h
src/gui/: main_qt.cpp
src/inout/: igc_storage.cpp  igc_storage.h  inout.h  inout_flyhigh.cpp  inout_flyhigh.h  inout_igc.cpp  inout_igc.h  inout_mdb.cpp  inout_mdb.h  inout_mdb_win.cpp  inout_mdb_win.h  inout_xml.cpp  inout_xml.h  odbc_wrapper.cpp  odbc_wrapper.h
src/test/: FlugbuchMain.cpp  GoogleMapsTestPage.html  WGoogleMap_testapp.cpp
src/util/: FormatStr.h  LocaleFormatting.h  SystemInformation.cpp  SystemInformation.h
src/web/: AreaTable.cpp  AreaTable.h  DetailTableBase.cpp  DetailTableBase.h  FlightTable.cpp  FlightTable.h  GliderTable.cpp  GliderTable.h  IgcImportForm.cpp  IgcImportForm.h  LocationTable.cpp  LocationTable.h  MainMenu.cpp  MainMenu.h  StatisticsTab.cpp  StatisticsTab.h  TabControl.cpp  TabControl.h  WelcomeScreen.cpp  WelcomeScreen.h  main.cpp  main.h
src/web/stat/: FlightlessTime.cpp  FlightlessTime.h  StatBase.h  StatFlightReport.cpp  StatFlightReport.h  StatMap.cpp  StatMap.h  StatStandard.cpp  StatStandard.h
src/web/stat/Wt/: WGeoPosEdit  WGeoPosEdit.cpp  WGoogleMap  WGoogleMap.cpp  WLatLng
